--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
  @font-face {
     font-family: 'Helvetica Neue LT GEO 45 Lights';
-    src: url('../../fonts/HelveticaNeueLTGEO-45Lights.woff2') format('woff2'),
-        url('../../fonts/HelveticaNeueLTGEO-45Lights.woff') format('woff'),
-        url('../../fonts/HelveticaNeueLTGEO-45Lights.ttf') format('truetype');
+    src: url('../fonts/HelveticaNeueLTGEO-45Lights.woff2') format('woff2'),
+        url('../fonts/HelveticaNeueLTGEO-45Lights.woff') format('woff'),
+        url('../fonts/HelveticaNeueLTGEO-45Lights.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -10,9 +10,9 @@
 
 @font-face {
     font-family: 'Helvetica Neue LT GEO 55 Roman';
-    src: url('../../fonts/HelveticaNeueLTGEO-75Bold.woff2') format('woff2'),
-        url('../../fonts/HelveticaNeueLTGEO-75Bold.woff') format('woff'),
-        url('../../fonts/HelveticaNeueLTGEO-75Bold.ttf') format('truetype');
+    src: url('../fonts/HelveticaNeueLTGEO-75Bold.woff2') format('woff2'),
+        url('../fonts/HelveticaNeueLTGEO-75Bold.woff') format('woff'),
+        url('../fonts/HelveticaNeueLTGEO-75Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
